--- a/data/plugins/summernote/less/summernote.less
+++ b/data/plugins/summernote/less/summernote.less
@@ -22,7 +22,7 @@
     display: none;
     z-index: 100;
     color: @dropzone-color;
-    background-color: #fff;
+    background-color: white;
     opacity: 0.95;
 
     .note-dropzone-message {
@@ -30,7 +30,7 @@
       vertical-align: middle;
       text-align: center;
       font-size: 28px;
-      font-weight: 700;
+      font-weight: bold;
     }
 
     &.hover {
@@ -128,89 +128,11 @@
     width: 100% !important;
     z-index: 1050; /* bs3 modal-backdrop: 1030, bs2: 1040 */
     .note-editable {
-      background-color: #fff;
+      background-color: white;
     }
     .note-resizebar {
       display: none;
     }
-  }
-
-/* Notifications */
-  .note-status-output {
-    display: block;
-    width: 100%;
-    font-size: 14px;
-    line-height: 1.42857143;
-    height: 20px;
-    margin-bottom: 0;
-    color: #000;
-    border: 0;
-    border-top: 1px solid #e2e2e2
-  }
-
-  .note-status-output:empty {
-    height: 0;
-    border-top:0 solid transparent
-  }
-
-  .note-status-output .pull-right {
-    float: right !important
-  }
-
-  .note-status-output .text-muted {
-    color: #777
-  }
-
-  .note-status-output .text-primary {
-    color: #286090
-  }
-
-  .note-status-output .text-success {
-    color: #3c763d
-  }
-
-  .note-status-output .text-info {
-    color: #31708f
-  }
-
-  .note-status-output .text-warning {
-    color: #8a6d3b
-  }
-
-  .note-status-output .text-danger {
-    color:#a94442
-  }
-
-  .note-status-output .alert {
-    margin: -7px 0 0 0;
-    padding: 7px 10px 2px 10px;
-    border-radius: 0;
-    color: #000;
-    background-color: #f5f5f5;
-  }
-
-  .note-status-output .alert .note-icon{
-    margin-right:5px
-  }
-
-  .note-status-output .alert-success {
-    color: #3c763d !important;
-    background-color: #dff0d8 !important;
-  }
-
-  .note-status-output .alert-info {
-    color: #31708f !important;
-    background-color: #d9edf7 !important;
-  }
-
-  .note-status-output .alert-warning {
-    color: #8a6d3b !important;
-    background-color: #fcf8e3 !important;
-  }
-
-  .note-status-output .alert-danger {
-    color: #a94442 !important;
-    background-color: #f2dede !important;
   }
 
   /* statusbar */
@@ -218,25 +140,15 @@
     background-color: @background-color;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    border-top: 1px solid #ddd;
     .note-resizebar {
       padding-top: 1px;
-      height: 9px;
+      height: 8px;
       width: 100%;
       cursor: ns-resize;
       .note-icon-bar {
         width: 20px;
         margin: 1px auto;
         border-top: 1px solid @border-color;
-      }
-    }
-
-    &.locked {
-      .note-resizebar {
-        cursor: default;
-        .note-icon-bar {
-          display: none;
-        }
       }
     }
   }
@@ -472,20 +384,20 @@
   .note-control-selection {
     position: absolute;
     display: none;
-    border: 1px solid #000;
+    border: 1px solid black;
     &>div { position: absolute; }
 
     .note-control-selection-bg {
       width: 100%;
       height: 100%;
-      background-color: #000;
+      background-color: black;
       .opacity(0.30)
     }
 
     .note-control-handle {
       width: 7px;
       height: 7px;
-      border: 1px solid #000;
+      border: 1px solid black;
     }
 
     .note-control-holder {
@@ -494,7 +406,7 @@
 
     .note-control-sizing {
       .note-control-handle;
-      background-color: #fff;
+      background-color: white;
     }
 
     .note-control-nw {
@@ -535,8 +447,8 @@
       bottom: 0;
       padding: 5px;
       margin: 5px;
-      color: #fff;
-      background-color: #000;
+      color: white;
+      background-color: black;
       font-size: 12px;
       .rounded(5px);
       .opacity(0.7);
@@ -563,7 +475,7 @@
           clear: both;
           font-weight: 400;
           line-height: 1.4;
-          color: #fff;
+          color: white;
           white-space: nowrap;
           text-decoration: none;
           background-color: #428bca;
