--- a/data/styles/base/custom/custom-fonts.less
+++ b/data/styles/base/custom/custom-fonts.less
@@ -219,11 +219,9 @@
 
 /*Added for summernote plugin*/
 @font-face {
-  font-family: "summernote";
-  font-style: normal;
-  font-weight: normal;
-  src: url("fonts/summernote.eot?546c01739436985e5a21a8cb325521f3");
-  src: url("fonts/summernote.eot?#iefix") format("embedded-opentype"),
-  url("fonts/summernote.woff?546c01739436985e5a21a8cb325521f3") format("woff"),
-  url("fonts/summernote.ttf?546c01739436985e5a21a8cb325521f3") format("truetype")
+    font-family: "summernote";
+    font-style: normal;
+    font-weight: normal;
+    src: url("fonts/summernote.eot?e557617934c52ea068954af79ed7c221");
+    src: url("fonts/summernote.eot?#iefix") format("embedded-opentype"), url("fonts/summernote.woff?e557617934c52ea068954af79ed7c221") format("woff"), url("fonts/summernote.ttf?e557617934c52ea068954af79ed7c221") format("truetype")
 }
