--- a/data/styles/base/custom/mod_tabs.less
+++ b/data/styles/base/custom/mod_tabs.less
@@ -10,7 +10,7 @@
     font-weight: 600;
     > a {
       margin-bottom: -1px;
-      border-bottom: 1px solid @brand-primary;
+      border-bottom: 1px solid transparent;
       border-left:0;
       border-right: 0;
       background: @gray-93;
@@ -22,6 +22,7 @@
         background: @gray-96;
         border-left:0;
         border-right: 0;
+        border-color: transparent;
       }
     }
     &.active {
@@ -31,6 +32,8 @@
         border-left:0;
         border-right: 0;
         border-top-color:@white;
+        bottom:-1px;
+        padding: 7px 10px 9px 10px;
         margin-top: 0;
         box-shadow: none;
         color: @black;
