--- a/data/styles/base/custom/custom-fixes.less
+++ b/data/styles/base/custom/custom-fixes.less
@@ -208,3 +208,49 @@ textarea.fixed-width-textarea {
 .input-group .input-group-btn {
   z-index: 1;
 }
+
+/* Flexbox cards with contextual coloring */
+
+.flex-container {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  justify-content: flex-start;
+}
+
+.flex-container::before {
+  display: block;
+}
+
+.card {
+  border: 1px solid #e1e1e1;
+  border-radius: 2px;
+  width: 100%;
+  padding: 15px;
+}
+
+
+/* BORDERS */
+.bt-success{
+	border-top: 4px solid @brand-success;
+}
+
+.bt-info{
+	border-top: 4px solid @brand-info;
+}
+
+.bt-primary{
+	border-top: 4px solid @brand-primary;
+}
+
+.bt-warning{
+	border-top: 4px solid @brand-warning;
+}
+
+.bt-danger{
+	border-top: 4px solid @brand-danger;
+}
+/* END BORDERS */
