--- a/data/styles/base/custom/mod_popovers.less
+++ b/data/styles/base/custom/mod_popovers.less
@@ -147,7 +147,7 @@
 .popover-title{
   background-color: #fff;
   border-bottom: 1px solid #fff;
-  font-family: "Open Sans";
+  font-family: "Open_Sans";
   font-size: 12px;
   line-height: 17px;
   padding: 23px 12px 9px 12px;
