--- a/data/plugins/prism/less/prism.less
+++ b/data/plugins/prism/less/prism.less
@@ -1,5 +1,5 @@
-/* PrismJS 1.11.0
-http://prismjs.com/download.html?themes=prism-okaidia&languages=markup+css+clike+javascript+git+json+less+php+typescript+sass+scss+twig+yaml&plugins=line-numbers+toolbar */
+/* PrismJS 1.15.0
+https://prismjs.com/download.html?#themes=prism-okaidia&languages=markup+css+clike+javascript+markup-templating+git+json+less+php+typescript+sass+scss+yaml+twig&plugins=line-numbers+toolbar */
 /**
  * okaidia theme for JavaScript, CSS and HTML
  * Loosely based on Monokai textmate theme by http://www.monokai.nl/
@@ -97,7 +97,8 @@ http://prismjs.com/download.html?themes=prism-okaidia&languages=markup+css+clike
  
  .token.atrule,
  .token.attr-value,
- .token.function {
+ .token.function,
+ .token.class-name {
 	 color: #e6db74;
  }
  
@@ -122,13 +123,13 @@ http://prismjs.com/download.html?themes=prism-okaidia&languages=markup+css+clike
 	 cursor: help;
  }
  
- pre.line-numbers {
+ pre[class*="language-"].line-numbers {
 	 position: relative;
 	 padding-left: 3.8em;
 	 counter-reset: linenumber;
  }
  
- pre.line-numbers > code {
+ pre[class*="language-"].line-numbers > code {
 	 position: relative;
 	 white-space: inherit;
  }
@@ -163,11 +164,12 @@ http://prismjs.com/download.html?themes=prism-okaidia&languages=markup+css+clike
 			 padding-right: 0.8em;
 			 text-align: right;
 		 }
- pre.code-toolbar {
+ 
+ div.code-toolbar {
 	 position: relative;
  }
  
- pre.code-toolbar > .toolbar {
+ div.code-toolbar > .toolbar {
 	 position: absolute;
 	 top: .3em;
 	 right: .2em;
@@ -175,19 +177,19 @@ http://prismjs.com/download.html?themes=prism-okaidia&languages=markup+css+clike
 	 opacity: 0;
  }
  
- pre.code-toolbar:hover > .toolbar {
+ div.code-toolbar:hover > .toolbar {
 	 opacity: 1;
  }
  
- pre.code-toolbar > .toolbar .toolbar-item {
+ div.code-toolbar > .toolbar .toolbar-item {
 	 display: inline-block;
  }
  
- pre.code-toolbar > .toolbar a {
+ div.code-toolbar > .toolbar a {
 	 cursor: pointer;
  }
  
- pre.code-toolbar > .toolbar button {
+ div.code-toolbar > .toolbar button {
 	 background: none;
 	 border: 0;
 	 color: inherit;
@@ -200,9 +202,9 @@ http://prismjs.com/download.html?themes=prism-okaidia&languages=markup+css+clike
 	 -ms-user-select: none;
  }
  
- pre.code-toolbar > .toolbar a,
- pre.code-toolbar > .toolbar button,
- pre.code-toolbar > .toolbar span {
+ div.code-toolbar > .toolbar a,
+ div.code-toolbar > .toolbar button,
+ div.code-toolbar > .toolbar span {
 	 color: #bbb;
 	 font-size: .8em;
 	 padding: 0 .5em;
@@ -212,14 +214,14 @@ http://prismjs.com/download.html?themes=prism-okaidia&languages=markup+css+clike
 	 border-radius: .5em;
  }
  
- pre.code-toolbar > .toolbar a:hover,
- pre.code-toolbar > .toolbar a:focus,
- pre.code-toolbar > .toolbar button:hover,
- pre.code-toolbar > .toolbar button:focus,
- pre.code-toolbar > .toolbar span:hover,
- pre.code-toolbar > .toolbar span:focus {
+ div.code-toolbar > .toolbar a:hover,
+ div.code-toolbar > .toolbar a:focus,
+ div.code-toolbar > .toolbar button:hover,
+ div.code-toolbar > .toolbar button:focus,
+ div.code-toolbar > .toolbar span:hover,
+ div.code-toolbar > .toolbar span:focus {
 	 color: inherit;
 	 text-decoration: none;
  }
-
- @import "../../../styles/base/variables.less";
+ 
+ 
