--- a/data/plugins/fancytree/less/skin-common.less
+++ b/data/plugins/fancytree/less/skin-common.less
@@ -14,7 +14,7 @@
 @fancy-icon-width: 16px;
 @fancy-icon-height: 16px;
 @fancy-icon-spacing: 3px;      // margin between icon/icon or icon/title
-@fancy-icon-ofs-top: 3px;      // extra vertical offset for expander, checkbox and icon
+@fancy-icon-ofs-top: 0px;      // extra vertical offset for expander, checkbox and icon
 @fancy-title-ofs-top: 0px;     // extra vertical offset for title
 @fancy-node-border-width: 1px;
 @fancy-node-border-radius: 0px;
@@ -22,12 +22,18 @@
 
 // @fancy-line-ofs-top: (@fancy-line-height - @fancy-icon-height) / 2;
 
-@fancy-image-dir: "./../../../../dist/css/icons";
+// webpack uses /dist/skin-common.less as root path
+// grunt-less uses /dist/skin-Xxx/ui.fancyree.less as root path
+// So we define our theme LESS files for webpack compatibility, i.e.
+// define the image path n every main LESS file instead of here.
+// Prefix may be set to "", "/", "./", or any other value
+// Note: this variable must be defined by the main LESS files:
+@fancy-image-prefix: "./../../../../dist/css/icons/";
 
 // Use 'url(...)' to link to the throbber image, or
 // use data-uri(...)' to inline the data in css instead:
-@fancy-loading-url: url("@{fancy-image-dir}/loading.gif");
-// @fancy-loading-url: data-uri("@{fancy-image-dir}/loading.gif");
+@fancy-loading-url: url("@{fancy-image-prefix}loading.gif");
+// @fancy-loading-url: data-uri("@{fancy-image-prefix}loading.gif");
 
 // Set to `true` to use `data-uri(...)` instead of a `url(...)` link:
 @fancy-inline-sprites: true;
@@ -35,7 +41,7 @@
 @fancy-font-size: 10pt;
 @fancy-font-family: tahoma, arial, helvetica;
 @fancy-font-color: black;
-@fancy-font-color-dimm: silver;
+@fancy-font-color-dimm: #c0c0c0;
 @fancy-font-error-color: red;
 
 //------------------------------------------------------------------------------
@@ -47,11 +53,11 @@
 .clearBgImage(@cond:true) when (@cond){
 	background-image: none;
 }
-.setBgImageUrl(@url) when (@fancy-use-sprites=true) and not (@fancy-inline-sprites=true) {
-	background-image: url("@{fancy-image-dir}/@{url}");
+.setBgImageUrl(@url) when (@fancy-use-sprites) and not (@fancy-inline-sprites) {
+	background-image: url("@{fancy-image-prefix}@{url}");
 }
-.setBgImageUrl(@url) when (@fancy-use-sprites=true) and (@fancy-inline-sprites=true) {
-	background-image: data-uri("@{fancy-image-dir}/@{url}");
+.setBgImageUrl(@url) when (@fancy-use-sprites) and (@fancy-inline-sprites) {
+	background-image: data-uri("@{fancy-image-prefix}@{url}");
 }
 .useSprite(@x, @y) when (@fancy-use-sprites){
 	.setBgPos(@x, @y);
@@ -85,9 +91,43 @@
  * Helpers
  *----------------------------------------------------------------------------*/
 // Redefine, in case jQuery-UI is not included
-.ui-helper-hidden {
+// .ui-helper-hidden,
+.fancytree-helper-hidden {
 	display: none;
 }
+.fancytree-helper-indeterminate-cb {  // tri-state checkbox
+	color: #777;
+}
+.fancytree-helper-disabled {
+	color: @fancy-font-color-dimm;
+}
+
+/* Helper to allow spinning loader icon with glyph-, ligature-, and SVG-icons. */
+.fancytree-helper-spin {
+    -webkit-animation: spin 1000ms infinite linear;
+    animation: spin 1000ms infinite linear;
+}
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg);
+    }
+}
+@keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg);
+    }
+}
+
 
 /*------------------------------------------------------------------------------
  * Container and UL / LI
@@ -100,11 +140,10 @@ ul.fancytree-container {
 	padding: 3px;
 	margin: 0; // DT issue 201
 	background-color: white;
-	border: 1px solid @input-border;
-    overflow-y: scroll;
-    max-height: 400px;
+	border: 1px dotted gray;
+	// overflow: auto;  // ext-dnd5: otherwise this is always the scroll parent
 //	height: 100%; // DT issue 263, 470
-	min-height: 0; // #192
+	min-height: 0%; // #192
 	position: relative; // #235
 	ul {
 		padding: 0 0 0 @fancy-level-indent;
@@ -135,16 +174,31 @@ ul.fancytree-container {
 	}
 }
 
-// Suppress lines if level is fixed expanded (option minExpandLevel)
-ul.fancytree-no-connector > li {
-	background-image: none;
-}
-
 // Style, when control is disabled
 .ui-fancytree-disabled ul.fancytree-container {
 	opacity: 0.5;
 //	filter: alpha(opacity=50); // Yields a css warning
 	background-color: silver;
+}
+
+ul.fancytree-connectors.fancytree-container {
+	li {
+		// Use 'data-uri(...)' to embed the image into CSS instead of linking to 'loading.gif':
+		background-image: data-uri("@{fancy-image-prefix}vline.gif");
+		background-position: 0 0;
+	}
+}
+
+// Suppress lines for last child node
+ul.fancytree-container li.fancytree-lastsib,
+// Suppress lines if level is fixed expanded (option minExpandLevel)
+ul.fancytree-no-connector > li {
+	background-image: none;
+}
+
+// Fix jQuery UI 'blind' animation for jQuery UI (#717)
+li.fancytree-animating {
+	position: relative;
 }
 
 /*------------------------------------------------------------------------------
@@ -156,7 +210,7 @@ span.fancytree-vline,
 span.fancytree-expander,
 span.fancytree-icon,
 span.fancytree-checkbox,
-span.fancytree-radio,
+// span.fancytree-radio,
 span.fancytree-drag-helper-img,
 #fancytree-drop-marker {
 	width: @fancy-icon-width;
@@ -174,7 +228,7 @@ span.fancytree-drag-helper-img,
 span.fancytree-icon,
 span.fancytree-checkbox,
 span.fancytree-expander,
-span.fancytree-radio,
+// span.fancytree-radio,
 span.fancytree-custom-icon {
 	margin-top: @fancy-icon-ofs-top;
 }
@@ -221,16 +275,25 @@ span.fancytree-expander {
 
 .fancytree-exp-n span.fancytree-expander,
 .fancytree-exp-nl span.fancytree-expander {
-	.clearBgImage( @fancy-hide-connectors );
+	// .clearBgImage( @fancy-hide-connectors );
+	background-image: none;
 	cursor: default;
 }
-.fancytree-exp-n span.fancytree-expander,       // End-node, not last sibling
-.fancytree-exp-n span.fancytree-expander:hover {
-	.useSprite(0, 4);
-}
-.fancytree-exp-nl span.fancytree-expander,      // End-node, last sibling
-.fancytree-exp-nl span.fancytree-expander:hover {
-	.useSprite(1, 4);
+.fancytree-connectors {
+	.fancytree-exp-n span.fancytree-expander,
+	.fancytree-exp-nl span.fancytree-expander {
+		background-size: 96px 200px;
+		.setBgImageUrl("icons.svg");
+		margin-top: 0;
+	}
+	.fancytree-exp-n span.fancytree-expander,       // End-node, not last sibling
+	.fancytree-exp-n span.fancytree-expander:hover {
+		.useSprite(0, 4);
+	}
+	.fancytree-exp-nl span.fancytree-expander,      // End-node, last sibling
+	.fancytree-exp-nl span.fancytree-expander:hover {
+		.useSprite(1, 4);
+	}
 }
 
 // --- Collapsed
@@ -279,6 +342,21 @@ span.fancytree-expander {
 	.useSprite(3, 6);
 }
 
+/* Fade out expanders, when container is not hovered or active */
+.fancytree-fade-expander {
+	span.fancytree-expander {
+		transition: opacity 1.5s;
+		opacity: 0;
+	}
+	&:hover span.fancytree-expander,
+	&.fancytree-treefocus span.fancytree-expander,
+	.fancytree-treefocus span.fancytree-expander,
+	[class*='fancytree-statusnode-'] span.fancytree-expander {
+		transition: opacity 0.6s;
+		opacity: 1;
+	}
+}
+
 /*------------------------------------------------------------------------------
  * Checkbox icon
  *----------------------------------------------------------------------------*/
@@ -287,15 +365,21 @@ span.fancytree-checkbox {
 	margin-left: @fancy-icon-spacing;
 	.useSprite(0, 2);
 	&:hover { .useSprite(1, 2); }
+	&.fancytree-radio { .useSprite(0, 3); }
+	&.fancytree-radio:hover { .useSprite(1, 3); }
 }
 .fancytree-partsel span.fancytree-checkbox {
 	.useSprite(4, 2);
 	&:hover { .useSprite(5, 2); }
+	&.fancytree-radio { .useSprite(4, 3); }
+	&.fancytree-radio:hover { .useSprite(5, 3); }
 }
 // selected after partsel, so it takes precedence:
 .fancytree-selected span.fancytree-checkbox {
 	.useSprite(2, 2);
 	&:hover { .useSprite(3, 2); }
+	&.fancytree-radio { .useSprite(2, 3); }
+	&.fancytree-radio:hover { .useSprite(3, 3); }
 }
 // Unselectable is dimmed, without hover effects
 .fancytree-unselectable {
@@ -311,35 +395,6 @@ span.fancytree-checkbox {
 	}
 	&.fancytree-selected span.fancytree-checkbox:hover {
 		.useSprite(2, 2);
-	}
-}
-
-/*------------------------------------------------------------------------------
- * Radiobutton icon
- * This is a customization, that may be activated by overriding the 'checkbox'
- * class name as 'fancytree-radio' in the tree options.
- *----------------------------------------------------------------------------*/
-
-.fancytree-radio {
-	span.fancytree-checkbox {
-		.useSprite(0, 3);
-		&:hover { .useSprite(1, 3); }
-	}
-	.fancytree-partsel span.fancytree-checkbox {
-		.useSprite(4, 3);
-		&:hover { .useSprite(5, 3); }
-	}
-	// Selected after partsel, so it takes precedence:
-	.fancytree-selected span.fancytree-checkbox {
-		.useSprite(2, 3);
-		&:hover { .useSprite(3, 3); }
-	}
-	// Unselectable is dimmed, without hover effects
-	.fancytree-unselectable {
-		span.fancytree-checkbox,
-		span.fancytree-checkbox:hover {
-			.useSprite(0, 3);
-		}
 	}
 }
 
@@ -451,6 +506,17 @@ span.fancytree-node.fancytree-error span.fancytree-title {
 /*------------------------------------------------------------------------------
  * Drag'n'drop support
  *----------------------------------------------------------------------------*/
+ /* ext-dnd5: */
+ span.fancytree-childcounter {
+	 color: #fff;
+	 background: #337ab7;  // bootstrap blue
+	 border: 1px solid gray;
+	 border-radius: 10px;
+	 padding: 2px;
+	 text-align: center;
+ }
+
+ /* ext-dnd: */
 div.fancytree-drag-helper {
 	span.fancytree-childcounter,
 	span.fancytree-dnd-modifier {
@@ -535,13 +601,56 @@ span.fancytree-drop-reject {
 
 
 /*------------------------------------------------------------------------------
+ * 'rtl' option
+ *----------------------------------------------------------------------------*/
+
+.fancytree-container.fancytree-rtl {
+	.fancytree-title {
+		/*unicode-bidi: bidi-override;*/ /* optional: reverse title letters */
+	}
+	span.fancytree-connector,
+	span.fancytree-expander,
+	span.fancytree-icon,
+	span.fancytree-drag-helper-img {
+		.setBgImageUrl("icons-rtl.gif");
+	}
+	.fancytree-exp-n span.fancytree-expander,
+	.fancytree-exp-nl span.fancytree-expander {
+		background-image: none;
+	}
+	&.fancytree-connectors .fancytree-exp-n span.fancytree-expander,
+	&.fancytree-connectors .fancytree-exp-nl span.fancytree-expander {
+		.setBgImageUrl("icons-rtl.gif");
+	}
+}
+ul.fancytree-container.fancytree-rtl {
+	ul {
+		padding: 0 16px 0 0;
+	}
+	&.fancytree-connectors li {
+		background-position: right 0;
+		background-image: url("@{fancy-image-prefix}vline-rtl.gif");
+	}
+	// Suppress lines for last child node
+	li.fancytree-lastsib,
+	// Suppress lines if level is fixed expanded (option minExpandLevel)
+	&.fancytree-no-connector > li {
+		background-image: none;
+	}
+}
+#fancytree-drop-marker.fancytree-rtl {
+	.setBgImageUrl("icons-rtl.gif");
+}
+
+/*------------------------------------------------------------------------------
  * 'table' extension
  *----------------------------------------------------------------------------*/
 
 table.fancytree-ext-table {
 	border-collapse: collapse;
 	span.fancytree-node {
-		display: inline-block; // #117
+		display: inline-block;  // #117
+		box-sizing: border-box;  // #562
 	}
 }
 
@@ -633,6 +742,17 @@ table.fancytree-ext-columnview {
 		font-weight: normal;
 	}
 }
+/* Hide expanders if all child nodes are hidden by filter */
+.fancytree-ext-filter-hide-expanders {
+	tr.fancytree-match span.fancytree-expander,
+	span.fancytree-node.fancytree-match span.fancytree-expander {
+		visibility: hidden;
+	}
+	tr.fancytree-submatch span.fancytree-expander,
+	span.fancytree-node.fancytree-submatch span.fancytree-expander {
+		visibility: visible;
+	}
+}
 
 .fancytree-ext-childcounter,
 .fancytree-ext-filter {
@@ -641,7 +761,8 @@ table.fancytree-ext-columnview {
 	// 	background-color: #ead61c; // yellow
 	// 	border-radius: 3px;
 	// }
-	span.fancytree-icon {
+	span.fancytree-icon,
+	span.fancytree-custom-icon {
 		position: relative;
 	}
 	span.fancytree-childcounter {
@@ -682,7 +803,7 @@ ul.fancytree-ext-wide {
 		position: absolute; // Allow left: 0. Note: prevents smooth dropdown animation
 		z-index: 1; // Behind expander and checkbox
 		left: 0px;
-		width: 100%;
+		min-width: 100%;
 		margin-left: 0;
 		margin-right: 0;
 
@@ -690,4 +811,44 @@ ul.fancytree-ext-wide {
 		-moz-box-sizing: border-box;
 		box-sizing: border-box;
 	}
+}
+
+/*------------------------------------------------------------------------------
+ * 'fixed' extension
+ *----------------------------------------------------------------------------*/
+
+.fancytree-ext-fixed-wrapper {
+    .fancytree-ext-fixed-hidden {
+        display: none;
+    }
+    div.fancytree-ext-fixed-scroll-border-bottom {
+        border-bottom: 3px solid rgba(0, 0, 0, 0.75);
+    }
+    div.fancytree-ext-fixed-scroll-border-right {
+        border-right: 3px solid rgba(0, 0, 0, 0.75);
+    }
+    div.fancytree-ext-fixed-wrapper-tl {
+        position: absolute;
+        overflow: hidden;
+        z-index: 3;
+        top: 0px;
+        left: 0px;
+    }
+    div.fancytree-ext-fixed-wrapper-tr {
+        position: absolute;
+        overflow: hidden;
+        z-index: 2;
+        top: 0px;
+    }
+    div.fancytree-ext-fixed-wrapper-bl {
+        position: absolute;
+        overflow: hidden;
+        z-index: 2;
+        left: 0px;
+    }
+    div.fancytree-ext-fixed-wrapper-br {
+        position: absolute;
+        overflow: scroll;
+        z-index: 1;
+    }
 }
